# risk-under-pressure

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  plot_cost_curves.py  plot_results.py  pyproject.toml  run_HB_experiments.sh  run_JB_experiments.sh  run_cost_evaluations.sh  run_cost_plots.sh  run_evaluation.py  run_evaluations.sh  run_experiments.sh  run_interactive.sh  run_plots.sh  run_template_ordering_analysis.sh  run_transfer_experiments.sh
configs/attacks/: gcg.yaml  jailbroken.yaml  pair.yaml
configs/experiments/: HB_gemma3_4b_it.yaml  HB_qwen2.5_0.5b.yaml  HB_qwen2.5_3b.yaml  HB_qwen2.5_7b.yaml  HB_qwen3_4b_saferl.yaml  HB_qwen3_8b.yaml  HB_tulu2_7b_base.yaml  HB_tulu2_7b_dpo.yaml  HB_tulu2_7b_sft.yaml  HB_tulu3_8b_base.yaml  HB_tulu3_8b_dpo.yaml  HB_tulu3_8b_rlvr.yaml  HB_tulu3_8b_sft.yaml  JB_gemma3_4b_it.yaml  JB_qwen2.5_0.5b.yaml  JB_qwen2.5_3b.yaml  JB_qwen2.5_7b.yaml  JB_qwen3_4b_saferl.yaml  JB_qwen3_8b.yaml  JB_tulu2_7b_base.yaml  JB_tulu2_7b_dpo.yaml  JB_tulu2_7b_sft.yaml  JB_tulu3_8b_base.yaml  JB_tulu3_8b_dpo.yaml  JB_tulu3_8b_rlvr.yaml  JB_tulu3_8b_sft.yaml  attack_sensitivity.yaml  attacker_comparison.yaml  base.yaml  harmbench_category_pressure.yaml  open_vs_closed.yaml  pressure_sensitivity.yaml  pressure_sensitivity_qwen2.5_0.5b.yaml  pressure_sensitivity_qwen2.5_3b.yaml  pressure_sensitivity_qwen2.5_7b.yaml  pressure_sensitivity_qwen3_4b_saferl.yaml  pressure_sensitivity_tulu2_7b_base.yaml  pressure_sensitivity_tulu2_7b_dpo.yaml  pressure_sensitivity_tulu2_7b_sft.yaml  pressure_sensitivity_tulu3_8b_base.yaml  (+6 more)
configs/experiments/paper/: attack_transfer.yaml  model_size.yaml  safety_alignment.yaml  training_stage.yaml
configs/models/: claude35_sonnet.yaml  gemini_flash.yaml  gemini_flash_lite.yaml  gemma3_4b_it.yaml  gpt4o_mini.yaml  gpt4o_mini_judge.yaml  llama3.1_8b_base.yaml  llama3.1_8b_instruct.yaml  llama3.1_8b_instruct_attacker.yaml  llama3.1_8b_instruct_judge.yaml  llama3.2_1b_base.yaml  llama3.2_1b_instruct.yaml  qwen2.5_0.5b.yaml  qwen2.5_3b.yaml  qwen2.5_7b.yaml  qwen2.5_7b_judge.yaml  qwen3_4b.yaml  qwen3_4b_saferl.yaml  qwen3_8b.yaml  tulu2_7b_base.yaml  tulu2_7b_dpo.yaml  tulu2_7b_sft.yaml  tulu3_8b_base.yaml  tulu3_8b_dpo.yaml  tulu3_8b_rlvr.yaml  tulu3_8b_sft.yaml
notebooks/: cost_curves.ipynb
outputs/n_prompts=50/training_stage/: metrics.csv  metrics.json
reports/: 2026-03-27-jailbreakbench-experiments.md
results/harmbench/pressure_sensitivity/: metrics.csv  metrics_by_category.csv  summary.txt
results/harmbench/training_stage/: metrics.csv  metrics_by_category.csv  summary.txt
scripts/: analyze_template_ordering.py  compute_attack_costs.py  compute_template_ordering.py  plot_cost_curves.py  plot_results.py  run_evaluation.py  run_inference.py  run_transfer_inference.py  select_best_model.py
setup/: create_env_fir_uv.sh  create_env_killarney_uv.sh  create_env_trillium_uv.sh  start_env.sh  submit_fir.sbatch  submit_killarney.sbatch  submit_nibi.sbatch  submit_trillium.sbatch
src/prisk/attacks/: __init__.py  factory.py  (+3 more)
src/rup/: __init__.py
(+1397 files in other folders)
