[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-under-pressure"
version = "0.1.0"
description = "Compute-aware evaluation of adversarial robustness in language models"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Malikeh Ehghaghi", email = "malikehehghaghi@gmail.com"},
  {name = "Boglarka Ecsedi", email = "ecsedi.bogi@gmail.com"}
]
keywords = ["llm", "adversarial robustness", "jailbreak", "safety", "red-teaming"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core ML
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
    # API clients
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.5.0",
    # Benchmarks
    "jailbreakbench>=1.0.0",
    "datasets>=2.19.0",
    # Config and utilities
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    # Metrics and numerics
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "statsmodels>=0.14.0",
    # Plotting
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # CLI and progress
    "tqdm>=4.66.0",
    "jsonlines>=4.0.0",
    "google-genai>=1.70.0",
    # Attack framework
    "easyjailbreak>=0.1.0",
]

[project.urls]
Repository = "https://github.com/Malikeh97/risk-under-pressure"
Paper = "TBD"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rup"]

[tool.uv]
package = true

[tool.uv.sources]
transformers-stream-generator = { path = "vendor/transformers-stream-generator" }
